--- a/index.html
+++ b/index.html
@@ -3,47 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gio's AI Creations</title>
+    <title>Gio's AI Applications</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Gio's AI Creations</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#request-form">Request Form</a></li>
-            </ul>
-        </nav>
+        <h1>Welcome to Gio's World of AI Applications</h1>
     </header>
     <main>
-        <section id="home">
-            <p>Discover the world's most interesting AI applications, coded by Gio.</p>
-        </section>
-        <section id="portfolio">
-            <h2>Portfolio</h2>
-            <!-- Portfolio items here -->
-        </section>
-        <section id="request-form">
-            <h2>Request an AI Application</h2>
-            <form id="aiRequestForm">
-                <label for="name">Your Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Your Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="description">Describe the AI Application:</label>
-                <textarea id="description" name="description" required></textarea>
-                <button type="submit">Submit Request</button>
+        <section id="contact-form">
+            <h2>Describe Your Dream AI Application</h2>
+            <form id="app-request-form">
+                <div class="form-group">
+                    <label for="name">Your Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Your Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="description">App Description:</label>
+                    <textarea id="description" name="description" rows="4" required></textarea>
+                </div>
+                <button type="submit">Submit</button>
             </form>
-            <div id="successMessage" style="display:none;">
-                <p>Your message has been received! Gio will review your message and reply shortly, usually within 48 hours.</p>
+            <div id="success-message" hidden>
+                Thank you for your submission! Gio will review your message and reply shortly, usually within 48 hours.
             </div>
         </section>
     </main>
-    <footer>
-        <p>© Gio's AI Creations</p>
-    </footer>
     <script src="script.js"></script>
 </body>
 </html>
