--- a/testPage.html
+++ b/testPage.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test Page</title>
+    <title>Fun AI Quiz</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        .question-container {
+            margin-bottom: 20px;
+        }
+        .question {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h1>This is a Fun Test Page</h1>
-    <p>Have fun exploring!</p>
-</body>
-</html>
+    <h1>Fun AI Quiz</h1>
+    <div id="quizContainer">
+        <div class="question-container">
+            <div class="question">What does AI stand for?</div>
+            <button class="answer" data-correct="true">Artificial
