--- a/voiceGenerator.html
+++ b/voiceGenerator.html
@@ -2,37 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Voice Generator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
+    <title>Test Page - Voice Generator</title>
+    <script>
+        function testVoiceGenerator() {
+            // Check if the Web Speech API is supported
+            if ('speechSynthesis' in window) {
+                // Create a new speech synthesis utterance
+                var utterance = new SpeechSynthesisUtterance('Testing the voice generator. This is fun!');
+                
+                // Optionally, customize the utterance properties
+                utterance.lang = 'en-US';
+                utterance.rate = 1;
+                utterance.pitch = 1;
+                
+                // Speak the utterance
+                window.speechSynthesis.speak(utterance);
+            } else {
+                alert('Sorry, your browser does not support the Web Speech API');
+            }
         }
-        input, button {
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 16px;
-        }
-        #output {
-            margin-top: 20px;
-        }
-    </style>
+    </script>
 </head>
 <body>
-    <h1>Voice Generator Page</h1>
-    <p>Type something and hear it!</p>
-    <input type="text" id="textInput" placeholder="Type here...">
-    <button id="generateVoiceButton">Generate Voice</button>
-    <div id="output">Voice output will appear here... (Placeholder)</div>
-
-    <script>
-        // Placeholder for voice generation functionality
-        document.getElementById('generateVoiceButton').addEventListener('click', () => {
-            const inputText = document.getElementById('textInput').value;
-            // This is where the integration with a voice generation API would occur
-            document.getElementById('output').textContent = `Generating voice for: "${inputText}"... (functionality not implemented)`;
-        });
-    </script>
+    <h1>This is a Fun Test Page</h1>
+    <p>Have fun exploring!</p>
+    <button onclick="testVoiceGenerator()">Test Voice Generator</button>
 </body>
 </html>
